<resources>
    <string name="app_name">DrawingApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">221623114699507</string>

    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="agence_demo_application">Agence Demo Application</string>
    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="btn_sign_up">Don\'t hava an Account? Sign up now!</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_signin">I already have a account, Sign in now!</string>
    <string name="btn_draw">Draw Something Awesome</string>
    <string name="btn_list_users">List Users</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_load">Load</string>

    <string name="error_sign_up">Passwords don\'t match!:</string>
    <string name="error_sign_in">Incorrect user/password\\n combination</string>
    <string name="success_sign_up">User Saved!</string>
    <string name="failure_sign_up">User cannot be saved</string>

    <string name="draw_value">Draw</string>
    <string name="toolbar_button_home">Logout</string>
    <string name="home_value">Home</string>
    <string name="toolbar_title_user_list">Registered Users</string>
</resources>
