<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingEnd="50dp"
    android:orientation="vertical">

    <View
        android:layout_weight="0.2203"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/signup_title"
        android:layout_weight="0.0677"
        android:textColor="@color/colorSecondaryDark"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:text="@string/title_sign_up"
        android:textSize="22sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/username_edittext"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:layout_weight="0.0677"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="7dp"/>
    <EditText
        android:id="@+id/password_edittext"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:background="@color/white"
        android:layout_weight="0.0677"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="7dp"/>

    <EditText
        android:id="@+id/confirm_password_edittext"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:background="@color/white"
        android:layout_weight="0.0677"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.032" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_weight="0.0777"
        android:textColor="@color/white"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <View
        android:layout_weight="0.0338"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_weight="0.0567"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/btn_signin"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <View
        android:layout_weight="0.305"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</LinearLayout>